--- a/index.html
+++ b/index.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework2</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,500;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
                 
 
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li> <a href="">Studio</a> </li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo">WebStudio</a>
+            <ul class="nav">
+                <li> <a href="" class="link">Studio</a> </li>
+                <li><a href="" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
         <address>
             <ul>
                 <li>
-                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                     <a href="mailto:info@devstudio.com" class="adrs">info@devstudio.com</a>
                 </li>
                 <li>
-                     <a href="tel:+110001111111">+11 (000) 111-11-11</a> 
+                     <a href="tel:+110001111111" class="adrs">+11 (000) 111-11-11</a> 
                 </li>
             </ul>
         </address>
@@ -33,11 +35,11 @@
     </header>
     <main>
         <!-- 1 section -->
-        <section>
+        <section class="section-1">
             <h1 id="main">Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="button">Order Service</button>
         </section>
-        <section>
+        <section class="section-2">
             <h2> section2 </h2>
             <ul>
 
@@ -60,7 +62,7 @@
             </ul>
         </section>
         <!-- 2section -->
-        <section>
+        <section class="section-3">
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -85,9 +87,47 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/portfolio/img13.jpg" alt="Banking App" width="360">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/img12.jpg" alt="Marketing" width="360">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/img11.jpg" alt="Meditaion App" width="360">
+                    <h3>Meditaion App</h3>
+                    <p>App</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="./images/portfolio/img23.jpg" alt="Taxi Service" width="360">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/img22.jpg" alt="Screen Illustrations" width="360">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/img21.jpg" alt="Meditaion App" width="360">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
+
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
