--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
 
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo"> <span class="acccent">Web</span>Studio</a>
             <ul class="nav">
                 <li> <a href="" class="link">Studio</a> </li>
                 <li><a href="" class="link">Portfolio</a></li>
@@ -127,8 +127,8 @@
     </main>
 
     <footer>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="ftr-link"> <span class="acccent">Web</span>Studio</a>
+        <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
