--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html" class="ftr-link"> <span class="acccent">Web</span>Studio</a>
+    <footer class="frt-pg1">
+        <a href="./index.html" class="ftr-link logo"> <span class="acccent">Web</span>Studio</a>
         <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
