--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </main>
 
     <footer class="frt-pg1">
-        <a href="./index.html" class="ftr-link logo"> <span class="acccent">Web</span>Studio</a>
+        <a href="./index.html" class="logo"> <span class="acccent">Web</span><span class="Studio">Studio</span></a>
         <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
