--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <main>
         <!-- 1 section -->
         <section class="section-1">
-            <h1 id="main">Effective Solutions for Your Business</h1>
+            <h1 class="main-name">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
         <section class="section-2">
-            <h2> section2 </h2>
-            <ul>
+            <h2 class="sec2_h"> section2 </h2>
+            <ul class="sec2_list1">
 
                 <li>
                     <h3>Strategy</h3>
@@ -65,8 +65,8 @@
         </section>
         <!-- 2section -->
         <section class="section-3">
-            <h2>Our Team</h2>
-            <ul>
+            <h2 class="sec3_h">Our Team</h2>
+            <ul class="sec3_list1">
                 <li>
                     <img src="./images/img_3.jpg" alt="Our Product Designer photo" width="264">
                     <h3>Mark Guerrero</h3>
