--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
             <h1 class="main-name">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
+
         <section class="section-2">
             <h2 class="sec2_h"> section2 </h2>
             <ul class="sec2_list1">
 
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    <h3 class="Strategy">Strategy</h3>
+                    <p class="sec2_p1">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
@@ -63,38 +64,38 @@
                 </li>
             </ul>
         </section>
-        <!-- 2section -->
+       
         <section class="section-3">
             <h2 class="sec3_h">Our Team</h2>
             <ul class="sec3_list1">
-                <li>
+                <li class="sec3_li1">
                     <img src="./images/img_3.jpg" alt="Our Product Designer photo" width="264">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="name">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="sec3_li1">
                     <img src="./images/img_2.jpg" alt="Our Frontend Developer photo" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="sec3_li1">
                     <img src="./images/img_1.jpg" alt="Our Marketing photo" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="sec3_li1">
                     <img src="./images/img.jpg" alt="Our UI Designer photo" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Portfolio</h2>
+        <section class="section-4">
+            <h2 class="sec4_h">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/portfolio/img13.jpg" alt="Banking App" width="360">
-                    <h3>Banking App</h3>
+                    <h3 class="app">Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
@@ -104,7 +105,7 @@
                 </li>
                 <li>
                     <img src="./images/portfolio/img11.jpg" alt="Meditaion App" width="360">
-                    <h3>Meditaion App</h3>
+                    <h3>Meditation App</h3>
                     <p>App</p>
                 </li>
             </ul>
