--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 
 
         <nav>
-            <a href="./index.html" class="logo"> <span class="acccent">Web</span>Studio</a>
+            <a href="./index.html" class="logo"> Web <span class="Studio_head">Studio</span></a>
             <ul class="nav">
                 <li> <a href="" class="link">Studio</a> </li>
                 <li><a href="" class="link">Portfolio</a></li>
@@ -75,17 +75,17 @@
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img_2.jpg" alt="Our Frontend Developer photo" width="264">
-                    <h3>Tom Ford</h3>
+                    <h3 class="name">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img_1.jpg" alt="Our Marketing photo" width="264">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="name">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img.jpg" alt="Our UI Designer photo" width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="name">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -96,41 +96,42 @@
                 <li>
                     <img src="./images/portfolio/img13.jpg" alt="Banking App" width="360">
                     <h3 class="app">Banking App</h3>
-                    <p>App</p>
+                    <p class="sec4_txt">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img12.jpg" alt="Marketing" width="360">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="app">Cashless Payment</h3>
+                    <p class="sec4_txt">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img11.jpg" alt="Meditaion App" width="360">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3  class="app">Meditation App</h3>
+                    <p class="sec4_txt">App</p>
                 </li>
-            </ul>
-            <ul>
+           
+            <!-- </ul> -->
+            <!-- <ul> -->
                 <li>
                     <img src="./images/portfolio/img23.jpg" alt="Taxi Service" width="360">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3  class="app">Taxi Service</h3>
+                    <p class="sec4_txt">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img22.jpg" alt="Screen Illustrations" width="360">
-                    <h3>Screen Illustrations</h3>
+                    <h3  class="app">Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img21.jpg" alt="Meditaion App" width="360">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3  class="app">Online Courses</h3>
+                    <p class="sec4_txt">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer class="frt-pg1">
-        <a href="./index.html" class="logo"> <span class="acccent">Web</span><span class="Studio">Studio</span></a>
+        <a href="./index.html" class="logo"> Web <span class="Studio">Studio</span></a>
         <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
