--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="./index.html" class="logo"> Web <span class="Studio_head">Studio</span></a>
             <ul class="nav">
-                <li> <a href="" class="link">Studio</a> </li>
+                <li> <a href="./index.html" class="link">Studio</a> </li>
                 <li><a href="" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
@@ -51,16 +51,16 @@
                     <p class="sec2_p1">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="Strategy">Punctuality</h3>
+                    <p class="sec2_p1">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="Strategy">Diligence</h3>
+                    <p class="sec2_p1">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="Strategy">Technologies</h3>
+                    <p class="sec2_p1">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -93,17 +93,17 @@
         <section class="section-4">
             <h2 class="sec4_h">Our Portfolio</h2>
             <ul>
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img13.jpg" alt="Banking App" width="360">
                     <h3 class="app">Banking App</h3>
                     <p class="sec4_txt">App</p>
                 </li>
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img12.jpg" alt="Marketing" width="360">
                     <h3 class="app">Cashless Payment</h3>
                     <p class="sec4_txt">Marketing</p>
                 </li>
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img11.jpg" alt="Meditaion App" width="360">
                     <h3  class="app">Meditation App</h3>
                     <p class="sec4_txt">App</p>
@@ -111,17 +111,17 @@
            
             <!-- </ul> -->
             <!-- <ul> -->
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img23.jpg" alt="Taxi Service" width="360">
                     <h3  class="app">Taxi Service</h3>
                     <p class="sec4_txt">Marketing</p>
                 </li>
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img22.jpg" alt="Screen Illustrations" width="360">
                     <h3  class="app">Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
-                <li>
+                <li class="sec4_li1">
                     <img src="./images/portfolio/img21.jpg" alt="Meditaion App" width="360">
                     <h3  class="app">Online Courses</h3>
                     <p class="sec4_txt">Marketing</p>
