--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
 
-        <address>
+        <address class="head_adr">
             <ul>
                 <li>
                      <a href="mailto:info@devstudio.com" class="adrs">info@devstudio.com</a>
@@ -66,27 +66,27 @@
         </section>
        
         <section class="section-3">
-            <h2 class="sec3_h">Our Team</h2>
+            <h2 class="title3">Our Team</h2>
             <ul class="sec3_list1">
                 <li class="sec3_li1">
                     <img src="./images/img_3.jpg" alt="Our Product Designer photo" width="264">
                     <h3 class="name">Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="jb_title">Product Designer</p>
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img_2.jpg" alt="Our Frontend Developer photo" width="264">
                     <h3 class="name">Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="jb_title">Frontend Developer</p>
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img_1.jpg" alt="Our Marketing photo" width="264">
                     <h3 class="name">Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="jb_title">Marketing</p>
                 </li>
                 <li class="sec3_li1">
                     <img src="./images/img.jpg" alt="Our UI Designer photo" width="264">
                     <h3 class="name">Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="jb_title">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -119,7 +119,7 @@
                 <li class="sec4_li1">
                     <img src="./images/portfolio/img22.jpg" alt="Screen Illustrations" width="360">
                     <h3  class="app">Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p class="sec4_txt">Design</p>
                 </li>
                 <li class="sec4_li1">
                     <img src="./images/portfolio/img21.jpg" alt="Meditaion App" width="360">
@@ -131,7 +131,7 @@
     </main>
 
     <footer class="frt-pg1">
-        <a href="./index.html" class="logo"> Web <span class="Studio">Studio</span></a>
+        <a href="./index.html" class="logo"> Web <span class="studio">Studio</span></a>
         <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
