--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </header>
     <main>
         <!-- 1 section -->
-        <section class="section-1">
+        <section class="section-one">
             <h1 class="main-name">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
 
-        <section class="section-2">
+        <section class="section-two">
             <h2 class="sec2_h"> section2 </h2>
             <ul class="sec2_list1">
 
@@ -65,8 +65,8 @@
             </ul>
         </section>
        
-        <section class="section-3">
-            <h2 class="title3">Our Team</h2>
+        <section class="section-team">
+            <h2 class="title-team">Our Team</h2>
             <ul class="sec3_list1">
                 <li class="sec3_li1">
                     <img src="./images/img_3.jpg" alt="Our Product Designer photo" width="264">
@@ -90,7 +90,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section-4">
+        <section class="section-portfolio">
             <h2 class="sec4_h">Our Portfolio</h2>
             <ul>
                 <li class="sec4_li1">
