--- a/index.html
+++ b/index.html
@@ -43,47 +43,47 @@
         </section>
 
         <section class="section-two">
-            <h2 class="sec2_h"> section2 </h2>
-            <ul class="sec2_list1">
+            <h2 class="title_emt"> section2 </h2>
+            <ul class="two">
 
                 <li>
                     <h3 class="Strategy">Strategy</h3>
-                    <p class="sec2_p1">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    <p class="txt_strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
                     <h3 class="Strategy">Punctuality</h3>
-                    <p class="sec2_p1">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <p class="txt_strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3 class="Strategy">Diligence</h3>
-                    <p class="sec2_p1">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <p class="txt_strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3 class="Strategy">Technologies</h3>
-                    <p class="sec2_p1">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="txt_strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
        
         <section class="section-team">
             <h2 class="title-team">Our Team</h2>
-            <ul class="sec3_list1">
-                <li class="sec3_li1">
+            <ul class="users">
+                <li class="user_list">
                     <img src="./images/img_3.jpg" alt="Our Product Designer photo" width="264">
                     <h3 class="name">Mark Guerrero</h3>
                     <p class="jb_title">Product Designer</p>
                 </li>
-                <li class="sec3_li1">
+                <li class="user_list">
                     <img src="./images/img_2.jpg" alt="Our Frontend Developer photo" width="264">
                     <h3 class="name">Tom Ford</h3>
                     <p class="jb_title">Frontend Developer</p>
                 </li>
-                <li class="sec3_li1">
+                <li class="user_list">
                     <img src="./images/img_1.jpg" alt="Our Marketing photo" width="264">
                     <h3 class="name">Camila Garcia</h3>
                     <p class="jb_title">Marketing</p>
                 </li>
-                <li class="sec3_li1">
+                <li class="user_list">
                     <img src="./images/img.jpg" alt="Our UI Designer photo" width="264">
                     <h3 class="name">Daniel Wilson</h3>
                     <p class="jb_title">UI Designer</p>
@@ -91,46 +91,46 @@
             </ul>
         </section>
         <section class="section-portfolio">
-            <h2 class="sec4_h">Our Portfolio</h2>
+            <h2 class="title_portfolio">Our Portfolio</h2>
             <ul>
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img13.jpg" alt="Banking App" width="360">
                     <h3 class="app">Banking App</h3>
-                    <p class="sec4_txt">App</p>
+                    <p class="sec_txt">App</p>
                 </li>
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img12.jpg" alt="Marketing" width="360">
                     <h3 class="app">Cashless Payment</h3>
-                    <p class="sec4_txt">Marketing</p>
+                    <p class="sec_txt">Marketing</p>
                 </li>
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img11.jpg" alt="Meditaion App" width="360">
                     <h3  class="app">Meditation App</h3>
-                    <p class="sec4_txt">App</p>
+                    <p class="sec_txt">App</p>
                 </li>
            
             <!-- </ul> -->
             <!-- <ul> -->
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img23.jpg" alt="Taxi Service" width="360">
                     <h3  class="app">Taxi Service</h3>
-                    <p class="sec4_txt">Marketing</p>
+                    <p class="sec_txt">Marketing</p>
                 </li>
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img22.jpg" alt="Screen Illustrations" width="360">
                     <h3  class="app">Screen Illustrations</h3>
-                    <p class="sec4_txt">Design</p>
+                    <p class="sec_txt">Design</p>
                 </li>
-                <li class="sec4_li1">
+                <li class="list_prtfolio">
                     <img src="./images/portfolio/img21.jpg" alt="Meditaion App" width="360">
                     <h3  class="app">Online Courses</h3>
-                    <p class="sec4_txt">Marketing</p>
+                    <p class="sec_txt">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer class="frt-pg1">
+    <footer class="frt-pg">
         <a href="./index.html" class="logo"> Web <span class="studio">Studio</span></a>
         <p class="p-ftr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
