--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             <ul class="two">
 
                 <li>
-                    <h3 class="Strategy">Strategy</h3>
+                    <h3 class="strategy">Strategy</h3>
                     <p class="txt_strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3 class="Strategy">Punctuality</h3>
+                    <h3 class="strategy">Punctuality</h3>
                     <p class="txt_strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3 class="Strategy">Diligence</h3>
+                    <h3 class="strategy">Diligence</h3>
                     <p class="txt_strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3 class="Strategy">Technologies</h3>
+                    <h3 class="strategy">Technologies</h3>
                     <p class="txt_strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
